fix rest and api docs
